--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
+    "clean": "rimraf lib",
     "build": "tsc -P tsconfig.build.json",
-    "prepare": "npm run build"
+    "prepare": "npm run clean && npm run build"
   },
   "files": [
     "lib",
@@ -37,6 +38,7 @@
     "@types/node": "^8.5.2",
     "@types/prettier": "^1.9.0",
     "@types/uuid": "^3.4.3",
+    "rimraf": "^2.6.2",
     "typescript": "^2.6.1"
   }
 }
