--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf lib",
+    "test": "jest",
     "build": "tsc -P tsconfig.build.json",
-    "prepare": "npm run clean && npm run build"
+    "prepare": "npm test && npm run clean && npm run build"
   },
   "files": [
     "lib",
@@ -28,17 +29,33 @@
     "mkdirp": "^0.5.1",
     "prettier": "^1.9.2",
     "slice2js": "~3.7.0",
-    "slice2json": "^0.1.1",
+    "slice2json": "^0.1.3",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/babel-core": "^6.25.3",
     "@types/glob": "^5.0.33",
+    "@types/jest": "^22.0.1",
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^8.5.2",
     "@types/prettier": "^1.9.0",
     "@types/uuid": "^3.4.3",
+    "jest": "^22.1.3",
     "rimraf": "^2.6.2",
+    "ts-jest": "^22.0.1",
     "typescript": "^2.6.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   }
 }
