--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "rimraf lib",
     "test": "jest",
     "build": "tsc -P tsconfig.build.json",
-    "prepare": "npm test && npm run clean && npm run build"
+    "prepublishOnly": "npm test && npm run clean && npm run build"
   },
   "files": [
     "lib",
@@ -30,7 +30,7 @@
     "mkdirp": "^0.5.1",
     "prettier": "^1.18.2",
     "slice2js": "~3.7.2",
-    "slice2json": "^0.1.6",
+    "slice2json": "^0.3.1",
     "unixify": "^1.0.0",
     "uuid": "^3.3.2"
   },
